# Boombox

./: .gitignore  CMakeLists.txt  boombox.cpp  boombox.h  dealer.cpp  dealer.h  main.cpp  main.py  requirements.txt
assets/: styles.qss
src/core/: equalizer_processor.py  media_player.py  metadata.py
src/database/: db_manager.py  models.py
src/ui/: main_window.py
src/ui/widgets/: edit_dialog.py  equalizer_window.py  media_list.py  player_controls.py  sidebar.py
